--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -23,7 +23,7 @@ env:
   TERM: xterm-256color
 
 window:
-  opacity: 0.95
+  opacity: 0.99
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -47,10 +47,10 @@ window:
   # by DPI and the specified value is always added at both opposing sides.
   padding:
     x: 2
-    y: 2
+    # y: 2
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: true
+  dynamic_padding: false
 
   # Window decorations
   #
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: UbuntuMono Nerd Font
+    family: Iosevka Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -121,7 +121,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: UbuntuMono Nerd Font
+    family: Iosevka Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -135,7 +135,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: UbuntuMono Nerd Font
+    family: Iosevka Nerd Font
     # style: Italic
 
   # Bold italic font face
@@ -145,7 +145,7 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: UbuntuMono Nerd Font
+    family: Iosevka Nerd Font
     # style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
