--- a/alacritty/colors.yml
+++ b/alacritty/colors.yml
@@ -1,6 +1,34 @@
 # Colorschemes for my alacritty config
 
 schemes:
+  carbonfox: &carbonfox
+    # Default colors
+    primary:
+      background: '0x161616'
+      foreground: '0xf2f4f8'
+    # Normal colors
+    normal:
+      black:   '0x282828'
+      red:     '0xee5396'
+      green:   '0x25be6a'
+      yellow:  '0x08bdba'
+      blue:    '0x78a9ff'
+      magenta: '0xbe95ff'
+      cyan:    '0x33b1ff'
+      white:   '0xdfdfe0'
+    # Bright colors
+    bright:
+      black:   '0x484848'
+      red:     '0xf16da6'
+      green:   '0x46c880'
+      yellow:  '0x2dc7c4'
+      blue:    '0x8cb6ff'
+      magenta: '0xc8a5ff'
+      cyan:    '0x52bdff'
+      white:   '0xe4e4e5'
+    indexed_colors:
+      - { index: 16, color: '0x3ddbd9' }
+      - { index: 17, color: '0xff7eb6' }
   gruvbox_dark: &gruvbox_dark # Default colors
     primary:
       # hard contrast: background = '0x1d2021'
@@ -198,4 +226,4 @@ schemes:
         - { index: 16, color: '#FAB387' }
         - { index: 17, color: '#F5E0DC' }
 
-colors: *catppuccin
+colors: *carbonfox
