--- a/i3/config
+++ b/i3/config
@@ -11,7 +11,7 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: UbuntuMono NF 10
+font pango: Iosevka Nerd Font 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -54,7 +54,7 @@ set $right l
 floating_modifier Mod4
 
 # start a terminal
-bindsym Mod4+Return exec alacritty
+bindsym Mod4+Return exec kitty
 
 # kill focused window
 bindsym Mod4+q kill
