Change kitty font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family				Iosevka Term Nerd Font Complete Mono
-bold_font					Iosevka Term Bold Nerd Font Complete Mono
-bold_italic_font	Iosevka Term Bold Oblique Nerd Font Complete Mono
-italic_font				Iosevka Term Oblique Nerd Font Complete Mono
+font_family				JetBrainsMono Medium
+bold_font				JetBrainsMono Bold
+bold_italic_font		JetBrainsMono Bold Oblique
+italic_font				JetBrainsMono Oblique
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
