Change some configurations in kitty:
Remove unused mapping

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family				JetBrainsMono Medium
-bold_font				JetBrainsMono Bold
-bold_italic_font		JetBrainsMono Bold Oblique
-italic_font				JetBrainsMono Oblique
+font_family				JetBrainsMono Nerd Font
+bold_font				JetBrainsMono Nerd Font
+bold_italic_font		JetBrainsMono Nerd Font
+italic_font				JetBrainsMono Nerd Font
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@ italic_font				JetBrainsMono Oblique
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -1434,7 +1434,6 @@ map kitty_mod+a>l    set_background_opacity -0.1
 map kitty_mod+a>1    set_background_opacity 1
 map kitty_mod+a>d    set_background_opacity default
 map kitty_mod+delete clear_terminal reset active
-map ctrl+n           launch /usr/bin/bash -c 'goto'
 
 #: You can create shortcuts to clear/reset the terminal. For example::
 
