--- a/starship.toml
+++ b/starship.toml
@@ -1,10 +1,48 @@
 add_newline = false
 command_timeout = 500
+format = """
+$username\
+$hostname\
+$directory\
+$git_branch\
+$git_state\
+$git_status\
+$git_metrics\
+$fill\
+$nodejs\
+$cmd_duration $jobs $time\
+$line_break\
+$character"""
+
+[nodejs]
+format = "[$symbol($version )]($style)"
+
+[fill]
+symbol = " "
+
 [character]
 success_symbol = "[❯](bold green)"
 error_symbol = "[❯](bold red)"
+
 [status]
 disabled = false
 symbol = "✖ "
+
 [directory]
 truncation_symbol = "…/"
+
+[time]
+disabled = false
+style = "bold white"
+format = "[$time]($style)"
+
+[git_metrics]
+disabled = false
+
+[git_status]
+format = '([\[$all_status$ahead_behind\]]($style) )'
+style = "cyan"
+
+[git_state]
+format = '\([$state( $progress_current/$progress_total)]($style)\) '
+style = "bright-black"
