--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -7,11 +7,11 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = true
-        interval = 5
-        color_good = "#2AA198"
-        color_bad = "#586E75"
-        color_degraded = "#DC322F"
+	colors = true
+	interval = 5
+	color_good = "#2AA198"
+	color_bad = "#586E75"
+	color_degraded = "#DC322F"
 }
 
 # order += "ipv6"
@@ -61,12 +61,12 @@ battery all {
         status_unk = ""
         # status_full = ""
         status_full = "☻"
-        low_threshold = 15
+        low_threshold = 30
         threshold_type = time
 }
 
 memory {
-        format = "Mem.Used: %used | Mem.Free: %available"
+        format = "Mem.Used: %used"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
