--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JetBrainsMono Nerd Font
+    family: monospace
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -121,7 +121,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: JetBrainsMono Nerd Font
+    family: monospace
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -135,7 +135,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: JetBrainsMono Nerd Font
+    family: monospace
     # style: Italic
 
   # Bold italic font face
@@ -145,7 +145,7 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: JetBrainsMono Nerd Font
+    family: monospace
     # style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
