--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -111,9 +111,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: monospace
+    family: SauceCodePro Nerd Font
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Medium
 
   # Bold font face
   bold:
@@ -121,8 +121,8 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: monospace
-    style: Bold
+    family: SauceCodePro Nerd Font
+    style: Black
 
     # The `style` can be specified to pick a specific face.
     # style: Bold
@@ -135,8 +135,8 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: monospace
-    # style: Italic
+    family: SauceCodePro Nerd Font
+    style: Italic
 
   # Bold italic font face
   bold_italics:
@@ -145,8 +145,8 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: monospace
-    # style: Bold Italic
+    family: SauceCodePro Nerd Font
+    style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
