New polybar configuration

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,472 +1,34 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
-
-[tokyo]
-background = #1a1b26
-foreground = #a9b1d6
-foreground-alt = ${self.background}
-background-alt = ${self.foreground}
-underline = ${self.background}
-primary = #e0af68
-secondary = #f7768e
-alert = #f7768e
-;; UserDefined
-red = #f7768e
-purple = #9f78e1
-cyan = #7dcfff
-green = #9ece6a
-blue = #7aa2f7 
-orange = #ff9e64
-yellow = #e0af68
-
-[bar/mybar]
-;monitor = ${env:MONITOR:HDMI-1}
-width = 100%
-height = 24
-; offset-x = 2.5%
-;offset-y = 1%
-radius = 0.0
-fixed-center = false
-
-background = ${tokyo.background}
-foreground = ${tokyo.foreground}
-
-line-size = 1
-line-color = ${tokyo.red}
-
-border-size = 6
-border-color = ${tokyo.background}
-
-padding-left = 0
-padding-right = 1
-
-module-margin-left = 1
-module-margin-right = 1
-
-font-0 = FuraCode Nerd Font:size=9:antialias=true;0
-font-1 = fixed:pixelsize=10;1
-font-2 = siji:pixelsize=10;1
-
-modules-left = bspwm i3
-modules-center = date
-modules-right = pulseaudio battery backlight-acpi memory eth wlan powermenu
-
-tray-position = right
-tray-padding = 2
-locale= pt_BR.UTF-8
-;tray-background = #0063ff
-
-wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-scroll-up = bspwm-desknext
-scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format-prefix = 
-format-prefix-padding = 1
-format-prefix-foreground = ${tokyo.foreground-alt}
-format-prefix-background = ${tokyo.secondary}
-
-label-layout = %layout%
-label-layout-padding = 1
-label-layout-foreground = ${tokyo.foreground-alt}
-label-layout-background = ${tokyo.background-alt}
-
-label-indicator-padding = 1
-label-indicator-margin = 0
-label-indicator-background = ${tokyo.secondary}
-label-indicator-foreground = ${tokyo.foreground-alt}
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${tokyo.foreground}
-
-[module/bspwm]
-type = internal/bspwm
-
-label-focused = %index%
-label-focused-background = ${tokyo.blue}
-label-focused-foreground = ${tokyo.foreground-alt}
-label-focused-padding = 2
-
-label-occupied = %index%
-label-occupied-foreground = ${tokyo.foreground-alt}
-label-occupied-background = ${tokyo.background-alt}
-label-occupied-padding = 2
-
-label-urgent = %index%!
-label-urgent-background = ${tokyo.alert}
-label-urgent-padding = 2
-
-label-empty = %index%
-label-empty-foreground = ${tokyo.foreground-alt}
-label-empty-background = ${tokyo.background-alt}
-label-empty-padding = 2
-
-; Separator in between workspaces
-; label-separator = |
-
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
-
-; Only show workspaces on the same output as the bar
-;pin-workspaces = true
-
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${tokyo.primary}
-
-; focused = Active workspace on focused monitor
-label-focused = %index%
-label-focused-background = ${tokyo.background-alt}
-label-focused-padding = 2
-
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
-label-unfocused-padding = 2
-
-; visible = Active workspace on unfocused monitor
-label-visible = %index%
-label-visible-background = ${self.label-focused-background}
-label-visible-padding = ${self.label-focused-padding}
-
-; urgent = Workspace with urgency hint set
-label-urgent = %index%
-label-urgent-background = ${tokyo.alert}
-label-urgent-padding = 2
-
-; Separator in between workspaces
-; label-separator = |
-
-
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-[module/xbacklight]
-type = internal/xbacklight
-
-format = <label>
-format-prefix = "ﯦ"
-format-prefix-padding = 1 
-format-prefix-foreground = ${tokyo.foreground-alt}
-format-prefix-background = ${tokyo.cyan}
-label-padding = 1
-label-background = ${tokyo.background-alt}
-label-foreground = ${tokyo.foreground-alt}
-
-[module/backlight-acpi]
-inherit = module/xbacklight
-type = internal/backlight
-card = intel_backlight
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = 
-format-prefix-padding = 1
-format-prefix-foreground = ${tokyo.foreground-alt}
-format-prefix-background = ${tokyo.purple}
-label = "%percentage:3%% "
-label-foreground = ${tokyo.foreground-alt}
-label-background = ${tokyo.background-alt}
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = 
-format-prefix-padding = 1
-format-prefix-foreground = ${tokyo.foreground-alt}
-format-prefix-background = ${tokyo.green}
-label = %percentage_used:3%%
-label-padding = 1
-label-foreground = ${tokyo.foreground-alt}
-label-background = ${tokyo.background-alt}
-
-[module/wlan]
-type = internal/network
-interface = "wlp4s0"
-interval = 3.0
-
-format-connected-prefix = 直
-format-connected-prefix-padding = 1
-format-connected-prefix-background = ${tokyo.cyan}
-format-connected-prefix-foreground = ${tokyo.foreground-alt}
-format-connected = <label-connected><ramp-signal>
-label-connected = %essid%
-label-connected-padding = 1
-label-connected-background = ${tokyo.background-alt}
-label-connected-foreground = ${tokyo.foreground-alt}
-
-
-format-disconnected= 睊
-format-disconnected-padding = 1
-format-disconnected-background = ${tokyo.red}
-format-disconnected-foreground = ${tokyo.foreground-alt}
-
-ramp-signal-padding-right=1
-ramp-signal-0 = "Péssimo"
-ramp-signal-1 = "Ruim"
-ramp-signal-2 = "Reg"
-ramp-signal-3 = "Bom"
-ramp-signal-4 = "🔆 Laiza "
-ramp-signal-foreground = ${tokyo.foreground-alt}
-ramp-signal-background = ${tokyo.background-alt}
-
-[module/eth]
-type = internal/network
-interface = "enp3s0"
-interval = 3.0
-
-format-connected-prefix = ﯲ
-format-connected-prefix-padding = 1
-format-connected-prefix-foreground = ${tokyo.foreground-alt}
-format-connected-prefix-background = ${tokyo.green}
-label-connected = %local_ip%
-label-connected-padding = 1
-label-connected-foreground = ${tokyo.foreground-alt}
-label-connected-background = ${tokyo.background-alt}
-
-
-format-disconnected-prefix = 
-format-disconnected-prefix-padding = 1
-format-disconnected-prefix-foreground = ${tokyo.foreground-alt}
-format-disconnected-prefix-background = ${tokyo.orange}
-
-format-disconnected = <label-disconnected>
-label-disconnected =  None
-label-disconnected-padding = 1
-label-disconnected-foreground = ${tokyo.foreground-alt}
-label-disconnected-background = ${tokyo.background-alt}
-
-[module/date]
-type = internal/date
-interval = 1
-
-date = " %d/%m/%Y"
-date-alt = " %d %B %Y"
-
-time = %H:%M
-time-alt = %H:%M:%S
-
-format-prefix = "  "
-format-prefix-foreground = ${tokyo.foreground-alt}
-format-prefix-background = ${tokyo.blue}
-
-label = "%date% %time% "
-format-foreground = ${tokyo.foreground-alt}
-format-background = ${tokyo.background-alt}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <label-volume>
-format-volume-prefix = 
-format-volume-prefix-padding = 1
-format-volume-prefix-foreground = ${tokyo.foreground-alt}
-format-volume-prefix-background = ${tokyo.red}
-label-volume = %percentage:3%%
-label-volume-padding = 1
-label-volume-foreground = ${tokyo.foreground-alt}
-label-volume-background = ${tokyo.background-alt}
-
-format-muted = <label-muted>
-label-muted = mute
-format-muted-prefix = ﱝ
-format-muted-prefix-padding = 1
-format-muted-prefix-foreground = ${tokyo.foreground-alt}
-format-muted-prefix-background = ${tokyo.yellow}
-label-muted-padding = 1
-label-muted-foreground = ${tokyo.foreground-alt}
-label-muted-background = ${tokyo.background-alt}
-
-[module/alsa]
-type = internal/alsa
-
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
-label-volume-foreground = ${root.foreground}
-
-format-muted-prefix = 🔇
-format-muted-foreground = ${tokyo.foreground}
-label-muted = sound muted
-
-bar-volume-width = 10
-bar-volume-foreground-0 = ${tokyo.green}
-bar-volume-foreground-1 = ${tokyo.green}
-bar-volume-foreground-2 = ${tokyo.green}
-bar-volume-foreground-3 = ${tokyo.green}
-bar-volume-foreground-4 = ${tokyo.green}
-bar-volume-foreground-5 = ${tokyo.orange}
-bar-volume-foreground-6 = ${tokyo.red}
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${tokyo.foreground}
-
-[module/battery]
-type = internal/battery
-battery = BAT1
-adapter = AC
-full-at = 100
-
-format-charging = <animation-charging><label-charging>
-
-format-discharging = <animation-discharging><label-discharging>
-
-format-full-prefix = ""
-format-full-prefix-foreground = ${tokyo.foreground-alt}
-format-full-prefix-background = ${tokyo.yellow}
-format-full-prefix-padding = 1
-
-label-full-background = ${tokyo.background-alt}
-label-full-foreground = ${tokyo.foreground-alt}
-label-full-padding = 1
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${tokyo.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-padding = 1
-animation-charging-framerate = 600
-animation-charging-background = ${tokyo.yellow}
-animation-charging-foreground = ${tokyo.foreground-alt}
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-padding = 1
-animation-discharging-framerate = 600
-animation-discharging-background = ${tokyo.yellow}
-animation-discharging-foreground = ${tokyo.foreground-alt}
-
-label-charging-foreground = ${tokyo.foreground-alt}
-label-charging-background = ${tokyo.background-alt}
-label-charging-padding = 1
-
-label-discharging-foreground = ${tokyo.foreground-alt}
-label-discharging-background = ${tokyo.background-alt}
-label-discharging-padding = 1
-
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
-
-format = <ramp><label>
-format-warn = <ramp><label-warn>
-
-label = %temperature-c%
-label-warn = %temperature-c%
-label-padding = 1
-label-warn-padding = 1
-label-foreground = ${tokyo.foreground-alt}
-label-background = ${tokyo.background-alt}
-label-warn-foreground = ${tokyo.foreground-alt}
-label-warn-background = ${tokyo.background-alt}
-
-ramp-0 = 
-ramp-1 = 滛
-ramp-2 = 
-ramp-foreground = ${tokyo.foreground-alt}
-ramp-background = ${tokyo.blue}
-ramp-padding = 1
-
-[module/powermenu]
-type = custom/menu
-
-expand-right = true
-
-format-spacing = 1
-
-label-open = 
-label-open-foreground = ${tokyo.secondary}
-label-close =  cancel
-label-close-foreground = ${tokyo.secondary}
-label-separator = |
-label-separator-foreground = ${tokyo.foreground}
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = reboot
-
-menu-2-0 = power off
-menu-2-0-exec = poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
-
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
-
 [global/wm]
-margin-top = 5
-margin-bottom = 5
 
-; vim:ft=dosini
+margin-bottom = 0%
+margin-top = 0%
+
+include-file = ~/.config/polybar/color.ini
+include-file = ~/.config/polybar/modules.ini
+include-file = ~/.config/polybar/custom-modules.ini
+
+[bar/bar]
+
+bottom = true
+fixed-center = true
+width = 100%
+height = 40
+background = ${color.background}
+foreground = ${color.foreground}
+
+radius-top = 0.0
+radius-bottom = 0.0
+
+line-size = 2
+line-color = ${color.primary}
+padding = 0
+
+font-0 = "SauceCodePro Nerd Font:size=10;3"
+font-1 = "monospace:size=12;3"
+font-2 = "SauceCodePro Nerd Font:size=20;3"
+
+module-margin-left = 2
+module-margin-right = 2
+modules-left = launcher terminal web file
+modules-center = 
+modules-right = wired-network wifi alsa battery backlight date
