Add bspwm module

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -30,5 +30,5 @@ font-2 = "SauceCodePro Nerd Font:size=20;3"
 module-margin-left = 2
 module-margin-right = 2
 modules-left = launcher terminal web file
-modules-center = 
+modules-center = bspwm
 modules-right = wired-network wifi alsa battery backlight date
