--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -207,4 +207,37 @@ format-connected-prefix = 
 format-disconnected = ""
 label-connected = "%{A1:alacritty -e nmtui &:} %essid%%{A}"
 
+[module/bspwm]
+type = internal/bspwm
 
+pin-workspaces = true
+inline-mode = false
+enable-click = false
+enable-scroll = false
+reverse-scroll = false
+fuzzy-match = true
+occupied-scroll = true
+
+label-focused = %icon%
+label-focused-background = ${color.primary}
+label-focused-foreground = ${color.foreground}
+label-focused-padding = 2
+
+label-occupied = %icon%
+label-occupied-foreground = ${color.foreground}
+label-occupied-background = ${color.background}
+label-occupied-padding = 2
+
+label-urgent = %icon%!
+label-urgent-background = ${color.alert}
+label-urgent-padding = 2
+
+label-empty = %icon%
+label-empty-foreground = ${color.foreground}
+label-empty-background = ${color.background}
+label-empty-padding = 2
+
+ws-icon-0 = code;
+ws-icon-1 = web;爵
+ws-icon-2 = office;
+ws-icon-3 = graphics;
