Configure filesystem module polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -31,4 +31,4 @@ module-margin-left = 2
 module-margin-right = 2
 modules-left = launcher terminal web file
 modules-center = bspwm
-modules-right = wired-network wifi alsa battery backlight date
+modules-right = fs wired-network wifi alsa battery backlight date
