--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -241,3 +241,12 @@ ws-icon-0 = code;
 ws-icon-1 = web;爵
 ws-icon-2 = office;
 ws-icon-3 = graphics;
+
+[module/fs]
+
+type = internal/fs
+mount-0 = /
+interval = 10
+format-mounted =  <label-mounted>
+label-mounted =  %free%
+
