--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -113,7 +113,7 @@ font:
     #   - (Windows) Consolas
     family: SauceCodePro Nerd Font
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Medium
 
   # Bold font face
   bold:
@@ -122,7 +122,7 @@ font:
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
     family: SauceCodePro Nerd Font
-    style: Black
+    style: Bold
 
     # The `style` can be specified to pick a specific face.
     # style: Bold
@@ -136,7 +136,7 @@ font:
 
     # The `style` can be specified to pick a specific face.
     family: SauceCodePro Nerd Font
-    style: Italic
+    style: Medium Italic
 
   # Bold italic font face
   bold_italics:
