--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: SauceCodePro Nerd Font
+    family: Iosevka Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Medium
 
@@ -121,7 +121,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: SauceCodePro Nerd Font
+    family: Iosevka Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -135,7 +135,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: SauceCodePro Nerd Font
+    family: Iosevka Nerd Font
     style: Medium Italic
 
   # Bold italic font face
@@ -145,14 +145,14 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: SauceCodePro Nerd Font
+    family: Iosevka Nerd Font
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
 
   # Point size
-  size: 13.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
