--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -113,7 +113,7 @@ font:
     #   - (Windows) Consolas
     family: Hasklug Nerd Font
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Medium
 
   # Bold font face
   bold:
