--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -23,9 +23,9 @@ line-size = 2
 line-color = ${color.primary}
 padding = 0
 
-font-0 = "SauceCodePro Nerd Font:size=10;3"
+font-0 = "Hasklug Nerd Font:size=10;3"
 font-1 = "monospace:size=12;3"
-font-2 = "SauceCodePro Nerd Font:size=20;3"
+font-2 = "Hasklug Nerd Font:size=20;3"
 
 module-margin-left = 2
 module-margin-right = 2
