--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -111,9 +111,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Hasklug Nerd Font
+    family: JetBrainsMono Nerd Font
     # The `style` can be specified to pick a specific face.
-    style: Medium
+    style: Regular
 
   # Bold font face
   bold:
@@ -121,7 +121,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Hasklug Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -135,8 +135,8 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: Hasklug Nerd Font
-    style: Medium Italic
+    family: JetBrainsMono Nerd Font
+    style: Italic
 
   # Bold italic font face
   bold_italics:
@@ -145,7 +145,7 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: Hasklug Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
