--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,10 +1,12 @@
-theme =  "onedark"
+theme =  "rose_pine"
 
 [editor]
-idle-timeout = 0
+idle-timeout = 20
 completion-trigger-len = 1
-true-color = true
 line-number = "relative"
+bufferline = "always"
+cursorline = true
+color-modes = true
 
 [editor.cursor-shape]
 select = "block"
@@ -13,8 +15,23 @@ insert = "bar"
 [editor.lsp]
 display-messages = true
 
+[editor.file-picker]
+hidden = false
+
+[editor.statusline]
+left = ["mode", "spinner"]
+center = ["file-name"]
+right = ["diagnostics", "selections", "position", "file-encoding", "file-line-ending", "file-type"]
+separator = "|"
+mode.normal = "NORMAL"
+mode.insert = "INSERT"
+mode.select = "SELECT"
+
+[editor.indent-guides]
+render = true
+character = "┊" # Some characters that work well: "▏", "┆", "┊", "⸽"
+
 [keys.normal]
-"space" = { q = ":buffer-close", c = {a = "code_action"} }
-C-s = ":w" # Maps the Control-s to the typable command :w which is an alias for :write (save file)
-C-o = ":open ~/.config/helix/config.toml" # Maps the Control-o to opening of the helix config file
-G = "goto_file_end" # Maps `G` to goto end of file
+"0" = ["goto_line_start"]
+"$" = ["goto_line_end"]
+"esc" = ["collapse_selection","keep_primary_selection"]
